# ansvif_android

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ansvif_android/app/: BackgroundJob.java  DialogUtils.java  ExtraKeysView.java  TermuxActivity.java  TermuxHelpActivity.java  TermuxInstaller.java  TermuxOpenReceiver.java  TermuxPreferences.java  TermuxService.java  TermuxViewClient.java
app/src/main/java/com/ansvif_android/filepicker/: TermuxDocumentsProvider.java  TermuxFileReceiverActivity.java
app/src/main/java/com/termux/app/: TermuxInstaller.java  TermuxService.java
app/src/main/jniLibs/: SYMLINKS.txt
app/src/main/jniLibs/etc/: bash.bashrc  motd
app/src/main/jniLibs/lib/: libcrypto.so.1.1  libhistory.so.7.0  libncursesw.so.6.1  libreadline.so.7.0  libssl.so.1.1
app/src/main/jniLibs/lib/apt/methods/: copy  file  gpgv  http  https  rsh  store
app/src/main/jniLibs/lib/bash/: Makefile.inc  basename  dirname  finfo  head  id  ln  logname  mkdir  mypid  pathchk  print  printenv  push  realpath  rmdir  setpgid  sleep  strftime  sync  tee  truefalse  tty  uname  unlink  whoami
app/src/main/jniLibs/libexec/termux/: command-not-found
app/src/main/jniLibs/share/ansvif/: crashable
app/src/main/jniLibs/share/man/man1/: busybox.1  clear.1  dpkg-deb.1  dpkg-divert.1  dpkg-genbuildinfo.1  dpkg-query.1  dpkg-split.1  dpkg-trigger.1  dpkg.1  gpg-error-config.1  gpgv.1  infocmp.1  tabs.1  tic.1  toe.1  tput.1  tset.1
app/src/main/jniLibs/share/man/man7/: deb-version.7
app/src/main/res/layout/: activity_ansvif.xml  drawer_layout.xml  extra_keys_main.xml
app/src/main/res/xml/: shortcuts.xml
(+82 files in other folders)
